# kser

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  main.cpp  reflection.cpp  serialization.cpp
include/kser/: kser.hpp  serialize.hpp
test/: CMakeLists.txt  main.cpp  serialize.cpp
